# aiagentproposalreviewer

./: .dockerignore  .env.example  .gitignore  .hintrc  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
app/: __init__.py  konfigurasi.py  pengecualian.py  utama.py
app/agen/: __init__.py  agen_peninjau.py
app/layanan/: __init__.py  database_riwayat.py  pemformat_keluaran.py  pemuat_dokumen.py
app/skema/: __init__.py  model.py
app/statis/css/: gaya_utama.css
app/statis/js/: skrip_utama.js
app/templat/: indeks.html
deploy/: Dockerfile  QUICKFIX.md  README.md  TROUBLESHOOTING.md  deploy.sh  docker-compose.yml  nginx-docker.conf  nginx.conf  proposal-reviewer.service  quickfix.sh  setup-ssl.sh  test-api.sh  troubleshoot.sh  update.sh
docs/: TUTORIAL_AZURE.md
pengujian/: __init__.py  uji_agen.py
